Actualiza los enlaces de contacto

--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
     />
     <meta
       name="keywords"
-      content="Eduardo Maximiliano,portafolio,desarrollador,desarrollador web,desarrollador front end,mantenimiento web,diseño web,diseñador web,ui ux,freelance,maximo4ever"
+      content="Eduardo Maximiliano,portafolio,desarrollador,desarrollador web,desarrollador front end,diseño web,diseñador web,ui ux,freelance,maximojsdev, maximodev, maximo4ever"
     />
-    <meta name="robots" content="index,nofollow" />
+    <meta name="robots" content="index, follow" />
     <meta name="author" content="Eduardo maximiliano" />
-    <link rel="canonical" href="https://maximo4ever.github.io/" />
+    <meta name="theme-color" content="#303443" />
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/82767376?s=400&u=87460c41ac5ec28ca91668311c76a2f7a292de7e&v=4">
+    <meta property="og:image:alt" content="MaximoJSDev - Logo">
+    <link rel="canonical" href="https://MaximoJSDev.github.io/" />
     <link
       rel="shortcut icon"
       href="https://avatars.githubusercontent.com/u/82767376?s=400&u=87460c41ac5ec28ca91668311c76a2f7a292de7e&v=4"
-      type="image/x-icon"
+      type="image/png"
     />
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
@@ -35,10 +38,10 @@
 
   <body>
     <nav class="nav" id="navbar">
-      <a href="#home"
+      <a href="https://github.com/MaximoJSDev"
         ><img
           src="https://avatars.githubusercontent.com/u/82767376?s=400&u=87460c41ac5ec28ca91668311c76a2f7a292de7e&v=4"
-          alt="Maximo 4ever - Logo"
+          alt="MaximoJSDev - Logo"
           class="nav__logo"
       /></a>
       <ul class="nav__menu">
@@ -83,7 +86,7 @@
           <a
             class="social__a"
             target="_blank"
-            href="https://github.com/Maximo4ever"
+            href="https://github.com/MaximoJSDev"
           >
             <svg
               data-icon="github"
@@ -101,7 +104,7 @@
           <a
             class="social__a"
             target="_blank"
-            href="https://www.linkedin.com/in/eduardo-maximiliano-90432921a/"
+            href="https://linkedin.com/in/MaximoJSDev"
           >
             <svg
               data-icon="linkedin"
@@ -119,7 +122,7 @@
           <a
             class="social__a"
             target="_blank"
-            href="https://twitter.com/Maximo_4ever"
+            href="https://twitter.com/MaximoJSDev"
             ><svg
               data-icon="twitter"
               class="svg-inline--fa fa-twitter fa-w-16"
@@ -202,7 +205,7 @@
       <div class="projects__grid">
         <article class="projects__card">
           <a
-            href="https://space-tourism-nuxt-maximo-4ever.vercel.app/"
+            href="https://space-tourism-maximojsdev.vercel.app/"
             target="_blank"
           >
             <img
@@ -222,13 +225,13 @@
               <a
                 class="projects__card__btn"
                 target="_blank"
-                href="https://space-tourism-nuxt-maximo-4ever.vercel.app/"
+                href="https://space-tourism-maximojsdev.vercel.app/"
                 >Ver proyecto</a
               >
               <a
                 class="projects__card__btn btn-view-code"
                 target="_blank"
-                href="https://github.com/Maximo4ever/Space-Tourism-with-Nuxt"
+                href="https://github.com/MaximoJSDev/Space-Tourism-with-Nuxt"
                 >Ver codigo</a
               >
             </div>
@@ -236,7 +239,7 @@
         </article>
         <article class="projects__card">
           <a
-            href="https://maximo4ever.github.io/Fylo-Dark-Theme/"
+            href="https://MaximoJSDev.github.io/Fylo-Dark-Theme/"
             target="_blank"
           >
             <img
@@ -256,13 +259,13 @@
               <a
                 class="projects__card__btn"
                 target="_blank"
-                href="https://maximo4ever.github.io/Fylo-Dark-Theme/"
+                href="https://MaximoJSDev.github.io/Fylo-Dark-Theme/"
                 >Ver proyecto</a
               >
               <a
                 class="projects__card__btn btn-view-code"
                 target="_blank"
-                href="https://github.com/Maximo4ever/Fylo-Dark-Theme"
+                href="https://github.com/MaximoJSDev/Fylo-Dark-Theme"
                 >Ver codigo</a
               >
             </div>
@@ -270,7 +273,7 @@
         </article>
         <article class="projects__card">
           <a
-            href="https://ecommerce-product-page-maximo4ever.vercel.app/"
+            href="https://ecommerce-product-page-maximojsdev.vercel.app/"
             target="_blank"
           >
             <img
@@ -290,13 +293,13 @@
               <a
                 class="projects__card__btn"
                 target="_blank"
-                href="https://ecommerce-product-page-maximo4ever.vercel.app/"
+                href="https://ecommerce-product-page-maximojsdev.vercel.app/"
                 >Ver proyecto</a
               >
               <a
                 class="projects__card__btn btn-view-code"
                 target="_blank"
-                href="https://github.com/Maximo4ever/Ecommerce-product-page"
+                href="https://github.com/MaximoJSDev/Ecommerce-product-page"
                 >Ver codigo</a
               >
             </div>
@@ -304,7 +307,7 @@
         </article>
         <article class="projects__card">
           <a
-            href="https://maximo4ever.github.io/Url-Shortening-Api/"
+            href="https://MaximoJSDev.github.io/Url-Shortening-Api/"
             target="_blank"
           >
             <img
@@ -324,13 +327,13 @@
               <a
                 class="projects__card__btn"
                 target="_blank"
-                href="https://maximo4ever.github.io/Url-Shortening-Api/"
+                href="https://MaximoJSDev.github.io/Url-Shortening-Api/"
                 >Ver proyecto</a
               >
               <a
                 class="projects__card__btn btn-view-code"
                 target="_blank"
-                href="https://github.com/Maximo4ever/Url-Shortening-Api"
+                href="https://github.com/MaximoJSDev/Url-Shortening-Api"
                 >Ver codigo</a
               >
             </div>
@@ -338,7 +341,7 @@
         </article>
         <article class="projects__card">
           <a
-            href="https://Maximo4ever.github.io/Rest-countries-API/"
+            href="https://MaximoJSDev.github.io/Rest-countries-API/"
             target="_blank"
           >
             <img
@@ -358,13 +361,13 @@
               <a
                 class="projects__card__btn"
                 target="_blank"
-                href="https://Maximo4ever.github.io/Rest-countries-API/"
+                href="https://MaximoJSDev.github.io/Rest-countries-API/"
                 >Ver proyecto</a
               >
               <a
                 class="projects__card__btn btn-view-code"
                 target="_blank"
-                href="https://github.com/Maximo4ever/Rest-countries-API"
+                href="https://github.com/MaximoJSDev/Rest-countries-API"
                 >Ver codigo</a
               >
             </div>
@@ -372,7 +375,7 @@
         </article>
         <article class="projects__card">
           <a
-            href="https://Maximo4ever.github.io/IP-Address-Tracker/"
+            href="https://MaximoJSDev.github.io/IP-Address-Tracker/"
             target="_blank"
           >
             <img
@@ -392,13 +395,13 @@
               <a
                 class="projects__card__btn"
                 target="_blank"
-                href="https://maximo4ever.github.io/IP-Address-Tracker/"
+                href="https://MaximoJSDev.github.io/IP-Address-Tracker/"
                 >Ver proyecto</a
               >
               <a
                 class="projects__card__btn btn-view-code"
                 target="_blank"
-                href="https://github.com/Maximo4ever/IP-Address-Tracker"
+                href="https://github.com/MaximoJSDev/IP-Address-Tracker"
                 >Ver codigo</a
               >
             </div>
